Add possibility to anchor SnackBar position above a View (#846)
* Add possibility to anchor SnackBar position above a View

* Replace pattern matching in null check

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>

* Formatting: If brackets removed

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Formatting/ReOrganzation

* Fix merge

* Drop AnchorView for extension method

* Fix file name

* Rename file that throwing unsopported exception to follow XE naming.

* dumb commit

re trigger CI

* Roll back

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

--- a/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
@@ -5,10 +5,16 @@
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SnackBarPage">
     <StackLayout Spacing="10" Margin="20">
-        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
-        <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"></Button>
+        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"/>
+        <Button Clicked="DisplayToastClicked" Text="Show toast"/>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show SnackBar"/>
         <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"></Button>
-        <Label x:Name="StatusText"></Label>
+        <Button Clicked="DisplayToastAnchoredClicked" Text="Show toast above the round button"/>
+
+        <Label x:Name="StatusText"/>
+        <Button x:Name="roundButton" 
+                Text="+" FontAttributes="Bold" FontSize="25" Padding="0"
+                VerticalOptions="EndAndExpand" HorizontalOptions="End"
+                CornerRadius="20" WidthRequest="40" HeightRequest="40"/>
     </StackLayout>
 </pages:BasePage>
