Add possibility to anchor SnackBar position above a View (#846)
* Add possibility to anchor SnackBar position above a View

* Replace pattern matching in null check

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>

* Formatting: If brackets removed

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Formatting/ReOrganzation

* Fix merge

* Drop AnchorView for extension method

* Fix file name

* Rename file that throwing unsopported exception to follow XE naming.

* dumb commit

re trigger CI

* Roll back

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

Anchor for android, ios, macos

Fix build, fix tests

Fix naming

Support for ios < 11, remove obsolete API

--- a/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
@@ -1,14 +1,23 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SnackBarPage">
     <StackLayout Spacing="10" Margin="20">
-        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
-        <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"></Button>
+        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"/>
+        <Button Clicked="DisplayToastClicked" Text="Show toast"/>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"/>
         <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"></Button>
-        <Label x:Name="StatusText"></Label>
+        
+        <Label x:Name="StatusText"/>
+        <Button x:Name="Anchor1"
+                Clicked="DisplayToastAnchoredClicked"
+                Text="Show toast with anchor"
+                VerticalOptions="Center" HorizontalOptions="End"/>
+        <Button x:Name="Anchor2"
+                Clicked="DisplaySnackbarAnchoredClicked"
+                Text="Show snackbar with anchor"
+                VerticalOptions="End" HorizontalOptions="Start"
+                />
     </StackLayout>
 </pages:BasePage>
