--- a/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
+++ b/samples/XCT.Sample/Pages/Views/Popups/TransparentPopup.xaml
@@ -1,19 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
-           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-           xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-           xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
-           xmlns:iosxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.iOSSpecific;assembly=Xamarin.CommunityToolkit"
-           xmlns:uwpxct="clr-namespace:Xamarin.CommunityToolkit.UI.Views.WindowsSpecific;assembly=Xamarin.CommunityToolkit"
-           Size="{x:Static local:PopupSize.Tiny}"
-           Color="Transparent"
-           iosxct:Popup.ArrowDirection="Up"
-           uwpxct:Popup.BorderColor="Transparent"
-           x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.TransparentPopup">
+<xct:Popup
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.Popups.TransparentPopup"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Views.Popups"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    Size="{x:Static local:PopupSize.Tiny}"
+    Color="Transparent">
 
-    <Frame 
-        CornerRadius="{OnPlatform Android='50', UWP='50', iOS='25'}" 
-        HeightRequest="{OnPlatform Android='100', UWP='50'}" WidthRequest="{OnPlatform Android='100', UWP='50'}" 
-        BackgroundColor="Red" />
-    
+    <Frame
+        BackgroundColor="Red"
+        CornerRadius="{OnPlatform Android='50',
+                                  UWP='50',
+                                  iOS='25'}"
+        HeightRequest="{OnPlatform Android='100',
+                                   UWP='50'}"
+        WidthRequest="{OnPlatform Android='100',
+                                  UWP='50'}" />
+
 </xct:Popup>
