--- a/samples/XCT.Sample/Pages/Behaviors/CharactersValidationBehaviorPage.xaml
+++ b/samples/XCT.Sample/Pages/Behaviors/CharactersValidationBehaviorPage.xaml
@@ -62,7 +62,7 @@
             </Entry.Behaviors>
         </Entry>
 
-        <Label Text="The same but stying handeled by visual state manager."/>
+        <Label Text="The same but styling handled by visual state manager."/>
         <Entry Placeholder="Type characters...">
             <Entry.Behaviors>
                 <xct:CharactersValidationBehavior Flags="ValidateOnValueChanging"
