--- a/samples/XCT.Sample/Pages/Behaviors/SetFocusOnEntryCompletedBehaviorPage.xaml
+++ b/samples/XCT.Sample/Pages/Behaviors/SetFocusOnEntryCompletedBehaviorPage.xaml
@@ -3,7 +3,7 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.AttachedProperties.SetFocusOnEntryCompletedPage">
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.SetFocusOnEntryCompletedBehaviorPage">
 
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
@@ -13,17 +13,18 @@
             <Entry x:Name="Entry1"
                    Placeholder="Entry 1"
                    ReturnType="Next"
-                   xct:SetFocusOnEntryCompleted.NextElement="{x:Reference Entry2}"
+                   xct:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference Entry2}"
                    />
             <Entry x:Name="Entry2"
                    Placeholder="Entry 2"
                    ReturnType="Next"
-                   xct:SetFocusOnEntryCompleted.NextElement="{x:Reference Entry3}"
-                   />
+                   xct:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference Entry3}"
+                   >
+            </Entry>
             <Entry x:Name="Entry3"
                    Placeholder="Entry 3"
                    ReturnType="Next"
-                   xct:SetFocusOnEntryCompleted.NextElement="{x:Reference Entry4}"
+                   xct:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference Entry4}"
                    />
             <Entry x:Name="Entry4"
                    Placeholder="Entry 4 (no next entry this time)"
