--- a/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
@@ -35,6 +35,7 @@
         <BoxView
             xct:SideMenuView.Position="LeftMenu"
             xct:SideMenuView.MenuWidthPercentage=".5"
+            xct:SideMenuView.MainViewScaleFactor=".95"
             BackgroundColor="Orange"/>
 
         <!-- RightMenu -->
