--- a/samples/XCT.Sample/Pages/Effects/TouchEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/TouchEffectPage.xaml
@@ -93,7 +93,8 @@
             <StackLayout Style="{StaticResource GridRowContentStyle}">
                 <Label Text="Image | Native" />
                 <Image Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.button.png}"
-                  xct:TouchEffect.NativeAnimation="True" />
+                    xct:TouchEffect.NativeAnimation="True"
+                    xct:TouchEffect.Command="{Binding Command, Source={x:Reference Page}}"/>
             </StackLayout>
         </StackLayout>
     </ScrollView>
