--- a/samples/XCT.Sample/Pages/Extensions/ExtensionsGalleryPage.xaml
+++ b/samples/XCT.Sample/Pages/Extensions/ExtensionsGalleryPage.xaml
@@ -3,13 +3,12 @@
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+                xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Effects"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                ControlTemplate="{StaticResource GalleryPageTemplate}">
 
-    <StackLayout Margin="30"
-                 Spacing="30">
-        <Label Text="Showing an embeded image by it resource Id using ImageResource extension"/>
-        <Image WidthRequest="150"
-               HeightRequest="150"
-               Source="{xct:ImageResource Id=Xamarin.CommunityToolkit.Sample.Images.logo.png}"/>
-    </StackLayout>
+    <pages:BasePage.BindingContext>
+        <vm:ExtensionsGalleryViewModel/>
+    </pages:BasePage.BindingContext>
+
 </pages:BasePage>
