--- a/samples/XCT.Sample/Pages/Effects/StatusBarEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/StatusBarEffectPage.xaml
@@ -2,10 +2,13 @@
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:android="clr-namespace:Xamarin.CommunityToolkit.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.StatusBarEffectPage"
                 xct:StatusBarEffect.Color="{Binding StatusBarColor}"
                 xct:StatusBarEffect.Style="{Binding StatusBarStyle}"
+                android:NavigationBar.Color="{Binding StatusBarColor}"
+                android:NavigationBar.Style="{Binding NavigationBarStyle}"
                 x:Name="Page">
 
     <ScrollView Padding="{StaticResource ContentPadding}">
