--- a/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
@@ -14,7 +14,7 @@
         </Style>
     </pages:BasePage.Resources>
 
-    <xct:SideMenuView x:Name="SideMenuView">
+    <xct:SideMenuView x:Name="SideMenuView" StateChanged="OnStateChanged">
         <!-- MainView -->
         <StackLayout BackgroundColor="Gold"
                      xct:ShadowEffect.Color="Black">
