--- a/samples/XCT.Sample/Pages/Effects/StatusBarEffectPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/StatusBarEffectPage.xaml
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
-                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-                xmlns:android="clr-namespace:Xamarin.CommunityToolkit.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.StatusBarEffectPage"
-                xct:StatusBar.Color="{Binding StatusBarColor}"
-                xct:StatusBar.Style="{Binding StatusBarStyle}"
-                android:NavigationBar.Color="{Binding StatusBarColor}"
-                android:NavigationBar.Style="{Binding NavigationBarStyle}">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+    xmlns:android="clr-namespace:Xamarin.CommunityToolkit.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Effects"
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.StatusBarEffectPage"
+    xct:StatusBar.Color="{Binding StatusBarColor}"
+    xct:StatusBar.Style="{Binding StatusBarStyle}"
+    android:NavigationBar.Color="{Binding StatusBarColor}"
+    android:NavigationBar.Style="{Binding NavigationBarStyle}">
+
+    <pages:BasePage.BindingContext>
+        <vm:StatusBarEffectViewModel />
+    </pages:BasePage.BindingContext>
 
     <ScrollView Padding="{StaticResource ContentPadding}">
         <StackLayout Spacing="30"
