--- a/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
@@ -16,7 +16,8 @@
 
     <xct:SideMenuView x:Name="SideMenuView">
         <!-- MainView -->
-        <StackLayout BackgroundColor="Gold">
+        <StackLayout BackgroundColor="Gold"
+                     xct:ShadowEffect.Color="Black">
             <StackLayout
                 Orientation="Horizontal">
 
@@ -33,9 +34,11 @@
 
         <!-- LeftMenu -->
         <BoxView
+            xct:SideMenuView.MenuAppearanceType="SlideIn"
             xct:SideMenuView.Position="LeftMenu"
             xct:SideMenuView.MenuWidthPercentage=".5"
             xct:SideMenuView.MainViewScaleFactor=".95"
+            xct:ShadowEffect.Color="Black"
             BackgroundColor="Orange"/>
 
         <!-- RightMenu -->
