--- a/samples/XCT.Sample/Pages/Effects/FullScreen/FullScreenPersistentPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/FullScreen/FullScreenPersistentPage.xaml
@@ -1,23 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
+<pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.FullScreenPersistentPage"
+                xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+                xmlns:android="clr-namespace:Xamarin.CommunityToolkit.Effects.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:pancakeview="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
-                xct:FullScreenEffect.Mode="Enabled"
-                xct:FullScreenEffect.IsPersistent="True"
-                Title="FullScreen mode Enabled + Persistent"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.FullScreenPersistentPage">
+                Title="Android FullScreen mode Enabled + Persistent"
+                android:FullScreenEffect.Mode="Enabled"
+                android:FullScreenEffect.IsPersistent="True">
 
     <StackLayout Spacing="20">
-         <pancakeview:PancakeView CornerRadius="20" BackgroundColor="DeepSkyBlue" Padding="10" Margin="10">
-            <Label TextColor="Black" Text="When this page appears it will enable the full screen mode."/>
+        <pancakeview:PancakeView Margin="10"
+                                 Padding="10"
+                                 CornerRadius="20"
+                                 BackgroundColor="DeepSkyBlue">
+            <Label TextColor="Black"
+                   Text="When this page appears it will enable the full screen mode."/>
         </pancakeview:PancakeView>
 
-        <Button Text="Return or from physical back button" Clicked="Button_Clicked" HorizontalOptions="Center" />
+        <Button Text="Return or from physical back button"
+                Clicked="Button_Clicked"
+                HorizontalOptions="Center"/>
 
-        <pancakeview:PancakeView CornerRadius="20" BackgroundColor="DeepSkyBlue" Padding="10" Margin="10">
-            <Label TextColor="Black" Text="When it will disappears it will restore back, it will keep the full screen mode as it is"/>
+        <pancakeview:PancakeView Margin="10"
+                                 Padding="10"
+                                 CornerRadius="20"
+                                 BackgroundColor="DeepSkyBlue">
+            <Label TextColor="Black"
+                   Text="When it will disappears it will restore back, it will keep the full screen mode as it is"/>
         </pancakeview:PancakeView>
 
     </StackLayout>
