Add parallax value

--- a/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SideMenuViewPage.xaml
@@ -33,19 +33,25 @@
         </StackLayout>
 
         <!-- LeftMenu -->
-        <BoxView
+        <StackLayout
+            xct:SideMenuView.ParallaxValue="50"
             xct:SideMenuView.MenuAppearanceType="SlideIn"
             xct:SideMenuView.Position="LeftMenu"
             xct:SideMenuView.MenuWidthPercentage=".5"
             xct:SideMenuView.MainViewScaleFactor=".95"
             xct:ShadowEffect.Color="Black"
-            BackgroundColor="Orange"/>
+            BackgroundColor="Orange">
+            <Label Text="LEFT MENU" />
+        </StackLayout>
 
         <!-- RightMenu -->
-        <BoxView
+        <StackLayout
+            xct:SideMenuView.ParallaxValue="75"
             xct:SideMenuView.Position="RightMenu"
-            xct:SideMenuView.MenuWidthPercentage=".3"
-            BackgroundColor="LightGreen" />
+            xct:SideMenuView.MenuWidthPercentage=".4"
+            BackgroundColor="LightGreen">
+            <Label Text="RIGHT MENU" />
+        </StackLayout>
 
     </xct:SideMenuView>
 
