--- a/samples/XCT.Sample/Pages/Effects/FullScreen/FullScreenLeanBackPage.xaml
+++ b/samples/XCT.Sample/Pages/Effects/FullScreen/FullScreenLeanBackPage.xaml
@@ -2,7 +2,7 @@
 <pages:BasePage x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.FullScreenLeanBackPage"
                 xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:android="clr-namespace:Xamarin.CommunityToolkit.Effects.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
+                xmlns:android="clr-namespace:Xamarin.CommunityToolkit.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.CommunityToolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:pancakeview="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
                 Title="Android FullScreen mode LeanBackDroid"
