--- a/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SnackBarPage.xaml
@@ -1,14 +1,21 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SnackBarPage">
     <StackLayout Spacing="10" Margin="20">
-        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
-        <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"></Button>
-        <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"></Button>
-        <Label x:Name="StatusText"></Label>
+        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"/>
+        <Button Clicked="DisplayToastClicked" Text="Show toast"/>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show Advanced SnackBar"/>
+        <Button Clicked="DisplaySnackBarWithPadding" Text="Show SnackBar with Padding"/>
+
+        <Button x:Name="Anchor1"
+                Clicked="DisplayToastAnchoredClicked"
+                Text="Show toast with anchor"/>
+        <Button x:Name="Anchor2"
+                Clicked="DisplaySnackbarAnchoredClicked"
+                Text="Show snackbar with anchor"/>
+
+        <Label x:Name="StatusText"/>
     </StackLayout>
 </pages:BasePage>
