--- a/samples/XCT.Sample/Pages/Views/SemanticOrderViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SemanticOrderViewPage.xaml
@@ -9,28 +9,14 @@
             <Button Text="Element outside the Semantic View"></Button>
             <xct:SemanticOrderView x:Name="acv">
                 <StackLayout>
-
-                    <Label Text="Second"
-                            VerticalOptions="CenterAndExpand" 
-                            HorizontalOptions="CenterAndExpand"
-                            x:Name="second"
-                       />
-                    <ScrollView>
-                        <StackLayout>
-                            <Label HeightRequest="50" Text="Top Label"></Label>
-                            <Label x:Name="third" HeightRequest="50" Text="Third Control"></Label>
-                            <Label HeightRequest="50" Text="Middle Label" x:Name="middle"></Label>
-                            <BoxView BackgroundColor="Purple" HeightRequest="50" ></BoxView>
-                            <BoxView BackgroundColor="Green" HeightRequest="50" ></BoxView>
-                            <Label HeightRequest="50" Text="Label Below Stuff" x:Name="bottom"></Label>
-                        </StackLayout>
-                    </ScrollView>
-
-                    <Label Text="First"
-                        VerticalOptions="CenterAndExpand" 
-                        HorizontalOptions="CenterAndExpand"
-                        x:Name="first" />
-
+                    <Label x:Name="second" Text="Second" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                    <Label Text="Top Label" HeightRequest="50"/>
+                    <Label x:Name="third" Text="Third" HeightRequest="50"/>
+                    <Label x:Name="fourth" Text="Fourth" HeightRequest="50"/>
+                    <BoxView BackgroundColor="Purple" HeightRequest="50"/>
+                    <BoxView BackgroundColor="Green" HeightRequest="50"/>
+                    <Label x:Name="fifth" Text="Fifth and last" HeightRequest="50"/>
+                    <Label x:Name="first" Text="First" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
                 </StackLayout>
             </xct:SemanticOrderView>
         </StackLayout>
