--- a/samples/XCT.Sample/Pages/Views/SemanticOrderViewPage.xaml
+++ b/samples/XCT.Sample/Pages/Views/SemanticOrderViewPage.xaml
@@ -13,7 +13,7 @@
                     <Button x:Name="third" Text="Third" Margin="0,20" />
                     <Label x:Name="fourth" Text="Fourth" Margin="0,20" />
                     <Button x:Name="fifth" Text="Fifth and last" Margin="0,20" />
-                    <Label x:Name="first" Text="First" Margin="0,20" />
+                    <Button x:Name="first" Text="First" Margin="0,20" />
                 </StackLayout>
             </xct:SemanticOrderView>
         </StackLayout>
